# -*- meson -*-
# Copyright (c) 2017 OFFIS Institute for Information Technology
#                          Oldenburg, Germany
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Dependency configuration

option('with_systemc',
       type: 'boolean',
       description: 'Whether to use SystemC time and hierarchy',
       value: true)

option('sc_libdir',
       type: 'string',
       description: 'SystemC library directory')

option('sc_includedir',
       type: 'string',
       description: 'SystemC include directory')

# Build options

option('enable_docs',
       type: 'boolean',
       description: 'Generate the Doxygen documentation',
       value: false)

option('enable_tests',
        type: 'boolean',
        description: 'Enable building the tests',
        value: true)
